[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]
[ext_resource path="res://GodotFPS-Assets/Font/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://GodotFPS-Assets/UI/UI_Square.png" type="Texture" id=3]
[ext_resource path="res://GodotFPS-Assets/Font/big_dynamicfont.tres" type="DynamicFont" id=4]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="."]
anchor_top = 0.993
anchor_bottom = 0.993
margin_left = 7.0
margin_top = -39.8
margin_right = 299.0
margin_bottom = 0.19989
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
tint_under = Color( 0.337255, 0.337255, 0.337255, 1 )
tint_progress = Color( 1, 0.00784314, 0.00784314, 1 )
nine_patch_stretch = true

[node name="AmmoText" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = -82.0
margin_right = 152.0
margin_bottom = -48.0
custom_fonts/font = ExtResource( 2 )
text = "Ammo: 50"

[node name="ScoreText" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = -118.0
margin_right = 152.0
margin_bottom = -84.0
custom_fonts/font = ExtResource( 2 )
text = "Score: 0"

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -253.5
margin_top = -114.5
margin_right = 253.5
margin_bottom = 114.5
custom_fonts/font = ExtResource( 4 )
text = "Kill the
Bastards!"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -265.0
margin_top = -119.0
margin_right = 265.0
custom_fonts/font = ExtResource( 4 )
text = "Press Enter"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
